--- a/exercicios-web/html/index.html
+++ b/exercicios-web/html/index.html
@@ -22,7 +22,8 @@
         <a href fetch-link="exercicios/texto1.html">01 - Texto 1</a> |
         <a href fetch-link="exercicios/texto2.html">02 - Texto 2</a> |
         <a href fetch-link="exercicios/listas.html">03 - Listas</a> |
-        <a href fetch-link="exercicios/listasAninhada.html">04 - Listas Aninhadas</a> |
+        <a href fetch-link="exercicios/listasAninhada_1.html">04 - Listas Aninhadas</a> |
+        <a href fetch-link="exercicios/links.html">05 - Links</a> |
 
     </nav>
 
