Formulários, links, tabelas em html

--- a/exercicios-web/html/exercicios/links.html
+++ b/exercicios-web/html/exercicios/links.html
@@ -13,3 +13,13 @@
 <a href="/index.html">Voltar 2</a><br>
 <!-- Voltando mais pastas, mas não navega para outra apsta que não a html -->
 <a href="../index.html">Voltar 3</a><br><br>
+
+<a href="mailto:kevin@email.com.br">Entre em contato</a><br>
+
+<div id="noticia" style="position: absolute; top:2000px;">
+    <h1>Notícia Bombástica</h1>
+    <p>Corpo da notícia</p>
+    <a href="#inicio">Voltar para o início</a>
+</div>
+
+<a href="#noticia">Esta é uma âncora para um determinado local da página</a>
