--- a/exercicios-web/html/index.html
+++ b/exercicios-web/html/index.html
@@ -24,6 +24,9 @@
         <a href fetch-link="exercicios/listas.html">03 - Listas</a> |
         <a href fetch-link="exercicios/listasAninhada_1.html">04 - Listas Aninhadas</a> |
         <a href fetch-link="exercicios/links.html">05 - Links</a> |
+        <a href fetch-link="exercicios/tabelas.html">06 - Tabelas</a> |
+        <a href fetch-link="exercicios/form/form.html">07 - Formulário</a> |
+
 
     </nav>
 
