--- a/exercicios-web/html/index.html
+++ b/exercicios-web/html/index.html
@@ -26,6 +26,7 @@
         <a href fetch-link="exercicios/links.html">05 - Links</a> |
         <a href fetch-link="exercicios/tabelas.html">06 - Tabelas</a> |
         <a href fetch-link="exercicios/form/form.html">07 - Formulário</a> |
+        <a href fetch-link="exercicios/imagens.html">08 - Imagens</a> |
 
 
     </nav>
